--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
     <!-- NavBar Component Code -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
                 Expense Manager
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard.html">
+                        <a class="nav-link" href="dashboard.html">
                             Dashboard
                         </a>
                     </li>
@@ -40,12 +40,12 @@
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/register.html">
+                        <a class="nav-link " href="register.html">
                             Sign Up
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login.html">
+                        <a class="nav-link" href="login.html">
                             Login
                         </a>
                     </li>
@@ -67,7 +67,7 @@
                           Create new
                         </button>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="/walletForm.html">Wallet</a>
+                          <a class="dropdown-item" href="walletForm.html">Wallet</a>
                           <button disabled class="dropdown-item">Transaction</button>
                         </div>
                       </div>
@@ -94,12 +94,12 @@
                                 </div>
                                 <div class="col-md-4 d-none d-lg-block">
                                     <ul class="list-group">
-                                        <a href="/transactions.html">
+                                        <a href="transactions.html">
                                             <li class="list-group-item board text-success">
                                                 <i class="fa fa-flag-checkered pr-1"> View Transactions </i>
                                             </li>
                                         </a>
-                                        <a href="/walletForm.html">
+                                        <a href="walletForm.html">
                                             <li class="list-group-item update text-info">
                                                 <i class="fa fa-edit pr-1"> Update Account Info</i>
                                             </li>
