--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
     <!-- NavBar Component Code -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
                 Expense Manager
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
@@ -31,19 +31,19 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard.html">
+                        <a class="nav-link" href="dashboard.html">
                             Dashboard
                         </a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/register.html">
+                        <a class="nav-link " href="register.html">
                             Sign Up
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login.html">
+                        <a class="nav-link" href="login.html">
                             Login
                         </a>
                     </li>
