--- a/transactions.html
+++ b/transactions.html
@@ -22,7 +22,7 @@
     <!-- NavBar Component Code -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
                 Expense Manager
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard.html">
+                        <a class="nav-link" href="dashboard.html">
                             Dashboard
                         </a>
                     </li>
@@ -58,10 +58,10 @@
 
     <!-- Project Board Starts Here MIND OTHER COMPONENTS WHEN COPY AND PASTING -->
     <div class="container">
-        <a href="/dashboard.html" class="btn btn-default btn-lg mb-3">
+        <a href="dashboard.html" class="btn btn-default btn-lg mb-3">
             Back
         </a>
-        <a href="/newtransactionForm.html" class="btn btn-info btn-lg mb-3">
+        <a href="newtransactionForm.html" class="btn btn-info btn-lg mb-3">
             <i class="fas fa-plus-circle"> Record new Transaction</i>
         </a>
         <br />
@@ -88,7 +88,7 @@
                 <td>PTCL Bill</td>
                 <td class="text-danger">-3000</td>
                 <td>
-                    <a class="text-info" href="/updatetransactionForm.html"><i class="fas fa-edit fa-2x"></i></a> 
+                    <a class="text-info" href="updatetransactionForm.html"><i class="fas fa-edit fa-2x"></i></a> 
                     <span class="text-danger"><i class="fas fa-trash fa-2x"></i></span>
                 </td>
               </tr>
@@ -97,7 +97,7 @@
                 <td>Income</td>
                 <td class="text-success">+30000</td>
                 <td>
-                    <a class="text-info" href="/updatetransactionForm.html"><i class="fas fa-edit fa-2x"></i></a> 
+                    <a class="text-info" href="updatetransactionForm.html"><i class="fas fa-edit fa-2x"></i></a> 
                     <span class="text-danger"><i class="fas fa-trash fa-2x"></i></span>
                 </td>
               </tr>
