--- a/updatetransactionForm.html
+++ b/updatetransactionForm.html
@@ -22,7 +22,7 @@
     <!-- NavBar Component Code -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" index.html">
                 Expense Manager
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard.html">
+                        <a class="nav-link" href="dashboard.html">
                             Dashboard
                         </a>
                     </li>
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 m-auto">
-                    <a href="/transactions.html" class="btn btn-light">
+                    <a href="transactions.html" class="btn btn-light">
                         Back to Wallet
                     </a>
                     <h4 class="display-4 text-center">Update Transaction</h4>
