--- a/NotFound.html
+++ b/NotFound.html
@@ -28,7 +28,7 @@
                             Sorry, an error has occured, Requested page not found!
                         </div>
                         <div class="error-actions">
-                            <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                            <a href="index.html" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
                                 Take Me Home </a>
                         </div>
                     </div>
