--- a/dashboard.html
+++ b/dashboard.html
@@ -84,15 +84,15 @@
                     <div class="container">
                         <div class="card card-body bg-light mb-3">
                             <div class="row" >
-                                <div class="col-lg-4 col-md-3 col-5">
+                                <div class="col-lg-4 col-md-3 col-6">
                                     <h3>UBL Account</h3>
                                     <p>Account Number: 1234-1234-1234-1234</p>
                                 </div>
-                                <div class="col-lg-4 col-md-3 col-5 text-center">
+                                <div class="col-lg-4 col-md-3 col-6 text-center">
                                     <h3>Balance</h3>
                                     <h1>Rs. 27000</h1>
                                 </div>
-                                <div class="col-md-4 d-none d-lg-block">
+                                <div class="col-md-4 col-12 d-lg-block">
                                     <ul class="list-group">
                                         <a href="transactions.html">
                                             <li class="list-group-item board text-success">
