--- a/walletForm.html
+++ b/walletForm.html
@@ -64,7 +64,7 @@
                 <div class="col-md-8 m-auto">
                     <h5 class="display-4 text-center">Create / Edit Wallet</h5>
                     <hr />
-                    <form action="/dashboard.html">
+                    <form action="dashboard.html">
                         <div class="form-group">
                             <input type="text" class="form-control form-control-lg " placeholder="Account Name" />
                         </div>
